# dsrp-canvas

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/agents/: __init__.py  dsrp_agent.py  prompts.py  study_orchestrator.py
backend/app/: __init__.py  main.py
backend/app/api/: analysis.py  cache.py  categories.py  concepts.py  export.py  jobs.py  patterns.py  quiz.py  search.py  seed.py  sources.py  study.py  websocket.py
backend/app/models/: dsrp.py  source.py
backend/app/services/: cache_service.py  chunking_service.py  export_service.py  hybrid_search_service.py  ingestion.py  job_service.py  mongodb_service.py  quiz_service.py  typedb_service.py  vector_service.py
backend/data/: categories.json
backend/mcp/: dsrp_server.py
backend/scripts/: load_schema.py
backend/tests/: __init__.py  conftest.py  test_api_analysis.py  test_api_concepts.py  test_api_export.py  test_api_patterns.py  test_api_sources.py  test_services.py
backend/typedb/schema/: dsrp-schema.tql
docs/: API.md  ARCHITECTURE-RECOMMENDATIONS.md  CIPP-E_DSRP_Study_Guide.md  G6-GRAPHIN-EVALUATION.md  PRD.md
documents/processed/: 20251217_033933_sample_privacy_policy.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
pipeline/: Dockerfile  README.md  ingest.py  requirements.txt  study_guide_ingestor.py
pipeline/prompts/: __init__.py  dsrp_extraction.py
pipeline/services/: __init__.py  mongodb_service.py  (+2 more)
(+36 files in other folders)
