[project]
name = "dsrp-canvas-backend"
version = "0.1.0"
description = "DSRP-powered knowledge analysis backend with AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "anthropic>=0.39.0",
    "typedb-driver>=2.28.0",
    # File ingestion
    "pypdf>=5.0.0",
    "python-multipart>=0.0.12",
    "openai-whisper>=20240930",
    "yt-dlp>=2024.11.0",
    # Export
    "markdown>=3.7",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
